--- a/CD/index.html
+++ b/CD/index.html
@@ -56,7 +56,7 @@
 		<div style="height: 400px; background-color: blue;"></div>
 	</div>
 	<div class="footer">
-		<div class="abc">
+		<div class="row">
 		  <div class="col-md-4 footer-left">
 		  	<img src="img/unisoft.PNG" alt="">
 		  </div>
