--- a/CD/index.html
+++ b/CD/index.html
@@ -82,8 +82,8 @@
 
                 </div>
                 <div class="card" style="margin-bottom:10px">
-                    <div class="icon" style="background-color: white;">
-                        <i class="fas fa-calendar-alt"></i> SỰ KIỆN
+                    <div class="icon" style="background-color: white;border-bottom:none">
+                        <i class="fas fa-calendar-alt"></i> TIN TỨC
                     </div>
                     <div class="list-group-item">
                         <div class="date">
@@ -127,18 +127,72 @@
                 </div>
             </div>
             <div style="padding: 5px" class=" col-xs-12 col-md-6 col-lg-4">
-                <div class="card">
-                    <img class="card-img-top" src="">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="card" style="margin-bottom:10px">
+                    <div class="icon" style="background-color: white; border-bottom:none">
+                        <i class="fas fa-bars"></i> TIN TỨC
+                    </div>
+                    <div class="list-group-item ">
+                        <div class="feature">
+                            <img align="" src="img\cap-nhat-hoc-phi-hoc-lai-hoc-cai-thien-hk-1-nam-hoc-2018-2019-2019-1-17-9-53-653.jpg">
+                            <div class="title">
+                                <a class="title" href="/forum/newscontent.aspx?id=381&amp;pg=0">Đối chiếu đăng ký tín chỉ - học phí học kỳ 3 năm học 2018-2019</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list-group-item">
+                        <div class="date icon-news">
+                            <img align="" src="img\danh-sach-sinh-vien-con-no-hp-hk2-2018-2019-2019-4-3-9-11-23.jpg">
+                        </div>
+                        <div>
+                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Danh sách sinh viên còn nợ HP HK2 2018-2019</a>
+                            <p>04/03/2019</p>
+                        </div>
+                    </div>
+                    <div class="list-group-item">
+                        <div class="date icon-news">
+                            <img align="" src="img\doi-chieu-hoc-phi-hk1-nam-hoc-2018-2019-2019-3-12-16-51-60.jpg">
+                        </div>
+                        <div>
+                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Đối chiếu học phí HK2 năm học 2018-2019</a><br>
+                            <p>02/22/2019</p>
+                        </div>
+                    </div>
+                    <div class="list-group-item">
+                        <div class="date icon-news">
+                            <img align="" src="img\tuyen-dung-giao-vien-va-cong-tac-vien-2019-2-22-15-47-763.jpg">
+                        </div>
+                        <div>
+                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Tuyển dụng giáo viên và cộng tác viên</a>
+                            <p>02/18/2019</p>
+                        </div>
+                    </div>
+                    <div class="list-group-item">
+                        <div class="date icon-news">
+                            <img align="" src="img\thong-bao-doi-chieu-du-lieu-hoc-phi-hk2-nam-hoc-2018-2019-2019-2-18-9-24-426.jpg">
+                        </div>
+                        <div>
+                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Thông báo đối chiếu dữ liệu học phí HK2 năm học 2018-2019</a>
+                            <p>02/18/2019</p>
+                        </div>
+                    </div>
+                    <div class="list-group-item">
+                        <div class="date icon-news">
+                            <img align="" src="img\cap-nhat-hoc-phi-hoc-lai-hoc-cai-thien-hk-1-nam-hoc-2018-2019-2019-1-17-9-53-653.jpg">
+                        </div>
+                        <div>
+                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Cập nhật học phí học lại, học cải thiện HK 1 năm học 2018-2019</a>
+                            <p>01/17/2019</p>
+                        </div>
+                    </div>
+                    <div class="list-group-item" align="right" style="display:block">
+                        <a href="forum/newslist.aspx?id=3">
+								  Xem tất cả </a>
                     </div>
                 </div>
             </div>
             <div style="padding: 5px" class=" col-xs-12 col-md-6 col-lg-4">
                 <div class="card" style="margin-bottom:10px">
-                    <div class="icon" style="background-color: white;">
+                    <div class="icon" style="background-color: white;border-bottom:none">
                         <i class="fas fa-bell"></i> THÔNG BÁO
                     </div>
                     <div class="list-group-item">
