--- a/CD/index.html
+++ b/CD/index.html
@@ -24,7 +24,7 @@
                     </a>
                 </div>
                 <div class="header-right col-md-4">
-                    <p class="login"><a href="#">Đăng nhập</a></p>
+                    <p class="login"><a href="Login.html">Đăng nhập</a></p>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
             <div style="padding:5px " class="col col-xs-12 col-md-6 col-lg-4">
                 <div class="card" style="margin-bottom:10px">
                     <div class="icon" style="background-color: white;">
-                        <i class="fas fa-user"></i> ĐĂNG NHẬP
+                        <i class="fas fa-user"></i> <b> ĐĂNG NHẬP</b>
                     </div>
                     <Form style="padding: 10px">
                         <div class="user">
@@ -83,7 +83,7 @@
                 </div>
                 <div class="card" style="margin-bottom:10px">
                     <div class="icon" style="background-color: white;border-bottom:none">
-                        <i class="fas fa-calendar-alt"></i> TIN TỨC
+                        <i class="fas fa-calendar-alt"></i> <b>SỰ KIỆN</b>
                     </div>
                     <div class="list-group-item">
                         <div class="date">
@@ -129,7 +129,7 @@
             <div style="padding: 5px" class=" col-xs-12 col-md-6 col-lg-4">
                 <div class="card" style="margin-bottom:10px">
                     <div class="icon" style="background-color: white; border-bottom:none">
-                        <i class="fas fa-bars"></i> TIN TỨC
+                        <i class="fas fa-bars"></i> <b> TIN TỨC</b>
                     </div>
                     <div class="list-group-item ">
                         <div class="feature">
@@ -193,7 +193,7 @@
             <div style="padding: 5px" class=" col-xs-12 col-md-6 col-lg-4">
                 <div class="card" style="margin-bottom:10px">
                     <div class="icon" style="background-color: white;border-bottom:none">
-                        <i class="fas fa-bell"></i> THÔNG BÁO
+                        <i class="fas fa-bell"></i> <b>THÔNG BÁO</b>
                     </div>
                     <div class="list-group-item">
                         <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Mức thu và thời gian thu học phí học kỳ 3 năm học 2018-2019 </a>
