--- a/CD/index.html
+++ b/CD/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="#"><span><i class="fas fa-coffee"></i></span>&ensp;Trang chủ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><span><i class="fas fa-car"></i></span>&ensp;chương trình đào tạo</a>
+                    <a class="nav-link" href="Chuongtrinhdaotao.html"><span><i class="fas fa-car"></i></span>&ensp;chương trình đào tạo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><span><i class="fas fa-car"></i></span>&ensp;lịch đăng kí học</a>
