--- a/CD/TBLDKH.html
+++ b/CD/TBLDKH.html
@@ -7,7 +7,7 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="tbldkh.css">
 	
 </head>
 <body>
@@ -52,9 +52,65 @@
 			</ul>
 		</div><!--End header-bottom-->
 	</div>
+
 	<div class="container">
-		<div style="height: 400px; background-color: blue;"></div>
-	</div>
+		<div >
+			<div class="tittle">
+				<h4>THÔNG BÁO LỊCH ĐĂNG KÝ HỌC</h4>
+				<h5>Đợt 1 Học kỳ 3 Năm học 2018-2019</h5>
+			</div>
+			<div class="table-responsive">
+		  <table class="table table-bordered">
+		    <th>Hệ đào tạo</th>
+		    <th>Khóa học</th>
+		    <th>Khoa</th>
+		    <th>Thời gian đăng ký đợt 1</th>
+		    <th>Thời gian đăng ký đợt 2</th>
+		    <tr>
+		    	<td rowspan="7" class="active hdt">công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    </tr>
+		     <tr>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    </tr><tr>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    </tr><tr>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    </tr> <tr>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    </tr> <tr>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    </tr> <tr>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    	<td>công</td>
+		    </tr>
+		  </table>
+		</div>
+
+		</div>
+	</div><!--End container-->
+		
+
 	<div class="footer">
 		<div class="row">
 		  <div class="col-md-4 footer-left">
