--- a/CD/index.html
+++ b/CD/index.html
@@ -34,7 +34,7 @@
         </div>
         <!--End header-top-->
         <div class="header-bottom">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding:0">
+            <nav class="navbar navbar-expand-lg navbar-light " style="padding:0">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
