--- a/CD/Login.html
+++ b/CD/Login.html
@@ -68,14 +68,14 @@
                 <div class="icon" style="background-color: #d9edf7;">
                     <i class="fas fa-user"></i> ĐĂNG NHẬP
                 </div>
-                <Form style="padding: 10px">
+                <Form method="POST" style="padding: 10px">
                     <div class="user">
                         <i class="fas fa-user"></i>
-                        <input name="LoginControl1$txtusername" type="text" id="LoginControl1_txtusername" class="form-control" placeholder="Tên đăng nhập">
+                        <input type="text" name="MSV" placeholder="Tên đăng nhập">
                     </div>
                     <div class="password">
                         <i class="fas fa-lock"></i>
-                        <input name="LoginControl1$txtusername" type="password" id="LoginControl1_txtusername" class="form-control" placeholder="Nhập mật khẩu">
+                        <input type="password" name="password" class="form-control" placeholder="Nhập mật khẩu">
                     </div>
                     <div class="checkbox">
                         <label>
@@ -83,7 +83,7 @@
                             </label>
                     </div>
                     <input type="submit" name="LoginControl1$btnDangNhap" value="Đăng nhập" id="LoginControl1_btnDangNhap" class="btn btn-success">
-                    <a href="/QuenMatKhau.aspx">Bạn quên mật khẩu của mình?</a>
+                    <a href="">Bạn quên mật khẩu của mình?</a>
                 </Form>
 
             </div>
