--- a/CD/index.html
+++ b/CD/index.html
@@ -74,19 +74,19 @@
                     <Form style="padding: 10px">
                         <div class="user">
                             <i class="fas fa-user"></i>
-                            <input name="LoginControl1$txtusername" type="text" id="LoginControl1_txtusername" class="form-control" placeholder="Tên đăng nhập">
+                            <input type="text" class="form-control" placeholder="Tên đăng nhập">
                         </div>
                         <div class="password">
                             <i class="fas fa-lock"></i>
-                            <input name="LoginControl1$txtusername" type="password" id="LoginControl1_txtusername" class="form-control" placeholder="Nhập mật khẩu">
+                            <input type="password" class="form-control" placeholder="Nhập mật khẩu">
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input id="LoginControl1_chkremember" type="checkbox" name="LoginControl1$chkremember">Ghi nhớ mật khẩu
+                                <input  type="checkbox" >Ghi nhớ mật khẩu
                             </label>
                         </div>
-                        <input type="submit" name="LoginControl1$btnDangNhap" value="Đăng nhập" id="LoginControl1_btnDangNhap" class="btn btn-success">
-                        <a href="/QuenMatKhau.aspx">Bạn quên mật khẩu của mình?</a>
+                        <input type="submit" value="Đăng nhập" class="btn btn-success">
+                        <a href="">Bạn quên mật khẩu của mình?</a>
                     </Form>
 
                 </div>
@@ -99,38 +99,38 @@
                             <span class="field-content-day">26</span><br>
                             <span class="field-content-month">4/2019</span>
                         </div>
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Xử lý trùng lịch thi</a>
+                        <a href="">Xử lý trùng lịch thi</a>
                     </div>
                     <div class="list-group-item">
                         <div class="date">
                             <span class="field-content-day">23</span><br>
                             <span class="field-content-month">8/2019</span>
                         </div>
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Một số thông tin về đào tạo chương trình 2</a>
+                        <a href="">Một số thông tin về đào tạo chương trình 2</a>
                     </div>
                     <div class="list-group-item">
                         <div class="date">
                             <span class="field-content-day">10</span><br>
                             <span class="field-content-month">8/2018</span>
                         </div>
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Trắc nghiệm phong cách của bạn</a>
+                        <a href="">Trắc nghiệm phong cách của bạn</a>
                     </div>
                     <div class="list-group-item">
                         <div class="date">
                             <span class="field-content-day">25</span><br>
                             <span class="field-content-month">7/2018</span>
                         </div>
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Quy chế đào tạo ĐH, CĐ hệ chính quy theo HTTC</a>
+                        <a href="">Quy chế đào tạo ĐH, CĐ hệ chính quy theo HTTC</a>
                     </div>
                     <div class="list-group-item">
                         <div class="date">
                             <span class="field-content-day">25</span><br>
                             <span class="field-content-month">4/2018</span>
                         </div>
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Quy định Chuyển đổi điểm/miễn học, miễn thi NN, quy đổi NN tương đương</a>
+                        <a href="">Quy định Chuyển đổi điểm/miễn học, miễn thi NN, quy đổi NN tương đương</a>
                     </div>
                     <div class="list-group-item" align="right" style="display:block">
-                        <a href="forum/newslist.aspx?id=3">
+                        <a href="">
 								  Xem tất cả </a>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                         <div class="feature">
                             <img align="" src="img\cap-nhat-hoc-phi-hoc-lai-hoc-cai-thien-hk-1-nam-hoc-2018-2019-2019-1-17-9-53-653.jpg">
                             <div class="title">
-                                <a class="title" href="/forum/newscontent.aspx?id=381&amp;pg=0">Đối chiếu đăng ký tín chỉ - học phí học kỳ 3 năm học 2018-2019</a>
+                                <a class="title" href="">Đối chiếu đăng ký tín chỉ - học phí học kỳ 3 năm học 2018-2019</a>
                             </div>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                             <img align="" src="img\danh-sach-sinh-vien-con-no-hp-hk2-2018-2019-2019-4-3-9-11-23.jpg">
                         </div>
                         <div>
-                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Danh sách sinh viên còn nợ HP HK2 2018-2019</a>
+                            <a href="">Danh sách sinh viên còn nợ HP HK2 2018-2019</a>
                             <p>04/03/2019</p>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                             <img align="" src="img\doi-chieu-hoc-phi-hk1-nam-hoc-2018-2019-2019-3-12-16-51-60.jpg">
                         </div>
                         <div>
-                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Đối chiếu học phí HK2 năm học 2018-2019</a><br>
+                            <a href="">Đối chiếu học phí HK2 năm học 2018-2019</a><br>
                             <p>02/22/2019</p>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                             <img align="" src="img\tuyen-dung-giao-vien-va-cong-tac-vien-2019-2-22-15-47-763.jpg">
                         </div>
                         <div>
-                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Tuyển dụng giáo viên và cộng tác viên</a>
+                            <a href="">Tuyển dụng giáo viên và cộng tác viên</a>
                             <p>02/18/2019</p>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                             <img align="" src="img\thong-bao-doi-chieu-du-lieu-hoc-phi-hk2-nam-hoc-2018-2019-2019-2-18-9-24-426.jpg">
                         </div>
                         <div>
-                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Thông báo đối chiếu dữ liệu học phí HK2 năm học 2018-2019</a>
+                            <a href="">Thông báo đối chiếu dữ liệu học phí HK2 năm học 2018-2019</a>
                             <p>02/18/2019</p>
                         </div>
                     </div>
@@ -189,12 +189,12 @@
                             <img align="" src="img\cap-nhat-hoc-phi-hoc-lai-hoc-cai-thien-hk-1-nam-hoc-2018-2019-2019-1-17-9-53-653.jpg">
                         </div>
                         <div>
-                            <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Cập nhật học phí học lại, học cải thiện HK 1 năm học 2018-2019</a>
+                            <a href="">Cập nhật học phí học lại, học cải thiện HK 1 năm học 2018-2019</a>
                             <p>01/17/2019</p>
                         </div>
                     </div>
                     <div class="list-group-item" align="right" style="display:block">
-                        <a href="forum/newslist.aspx?id=3">
+                        <a href="">
 								  Xem tất cả </a>
                     </div>
                 </div>
@@ -205,49 +205,49 @@
                         <i class="fas fa-bell"></i> <b>THÔNG BÁO</b>
                     </div>
                     <div class="list-group-item">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Mức thu và thời gian thu học phí học kỳ 3 năm học 2018-2019 </a>
+                        <a href="">Mức thu và thời gian thu học phí học kỳ 3 năm học 2018-2019 </a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Mức thu học phí các bậc đào tạo hệ chính quy năm học 2019-2020</a>
+                        <a href="">Mức thu học phí các bậc đào tạo hệ chính quy năm học 2019-2020</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Hủy lớp tín chỉ kỳ HK3 năm học 2018 - 2019</a>
+                        <a href="">Hủy lớp tín chỉ kỳ HK3 năm học 2018 - 2019</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Kết quả phúc khảo các môn chung HK2 năm học 2018-2019</a>
+                        <a href="">Kết quả phúc khảo các môn chung HK2 năm học 2018-2019</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Thời gian phúc khảo các môn chung HK2 năm học 2018-2019</a>
+                        <a href="">Thời gian phúc khảo các môn chung HK2 năm học 2018-2019</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">ĐĂNG KÝ TÍN CHỈ HỌC KỲ III Năm học (2018 - 2019)</a>
+                        <a href="">ĐĂNG KÝ TÍN CHỈ HỌC KỲ III Năm học (2018 - 2019)</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Danh sách sinh viên không đủ điều kiện thi HK2 2018-2019 do nợ học phí</a>
+                        <a href="">Danh sách sinh viên không đủ điều kiện thi HK2 2018-2019 do nợ học phí</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Lịch thi các môn chung HK2 2018-2019</a>
+                        <a href="">Lịch thi các môn chung HK2 2018-2019</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Lịch thi Quản lý Hành chính Nhà nước và Quản lý ngành GD&ĐT</a>
+                        <a href="">Lịch thi Quản lý Hành chính Nhà nước và Quản lý ngành GD&ĐT</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Lịch thi đánh giá năng lực Tiếng Anh ngày 20-4-2019</a>
+                        <a href="">Lịch thi đánh giá năng lực Tiếng Anh ngày 20-4-2019</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Lịch học QLHCNN & QL ngành GD&ĐT</a>
+                        <a href="">Lịch học QLHCNN & QL ngành GD&ĐT</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">THÔNG BÁO THU HỌC PHÍ BỔ SUNG HK2 NĂM HỌC 2018-2019</a>
+                        <a href="">THÔNG BÁO THU HỌC PHÍ BỔ SUNG HK2 NĂM HỌC 2018-2019</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Cập nhật học phí học ngoại ngữ 1,2 cho sinh viên học CT2</a>
+                        <a href="">Cập nhật học phí học ngoại ngữ 1,2 cho sinh viên học CT2</a>
                     </div>
                     <div class="list-group-item set-size">
-                        <a href="/forum/newscontent.aspx?id=375&amp;pg=0">Kết quả phúc khảo các môn chung HK1 năm học 2018-2019</a>
+                        <a href="">Kết quả phúc khảo các môn chung HK1 năm học 2018-2019</a>
                     </div>
                     <div class="list-group-item" align="right" style="display:block">
-                        <a href="forum/newslist.aspx?id=3">
+                        <a href="">
 								  Xem tất cả </a>
                     </div>
                 </div>
